alignment fix

--- a/server/client/src/components/MainText.css
+++ b/server/client/src/components/MainText.css
@@ -30,10 +30,11 @@
   font-family: auditionFont;
   font-weight: bolder;
   color: #e7e7de;
+  transform: translateY(3rem);
 }
 @media only screen and (max-width: 600px) {
   .test {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
 }
 @media only screen and (max-width: 300px) {
